# casa-anzen

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/qt/: security_dashboard.hpp  video_display_widget.hpp
include/utils/: cuda_postprocessing.hpp  cuda_preprocessing.hpp  cuda_utils.hpp  logger.hpp
src/qt/: qt_main.cpp  security_dashboard.cpp  video_display_widget.cpp
src/qt/components/: event_card.cpp  event_card.hpp
src/qt/managers/: caption_manager.cpp  caption_manager.hpp  configuration_manager.cpp  configuration_manager.hpp  event_manager.cpp  event_manager.hpp  main_coordinator.cpp  main_coordinator.hpp  menu_bar_manager.cpp  menu_bar_manager.hpp  security_dashboard_adapter.cpp  security_dashboard_adapter.hpp  system_status_manager.cpp  system_status_manager.hpp  ui_coordinator.cpp  ui_coordinator.hpp  video_processing_coordinator.cpp  video_processing_coordinator.hpp
src/qt/views/: event_feed_widget.cpp  event_feed_widget.hpp  status_bar_widget.cpp  status_bar_widget.hpp  zone_controls_widget.cpp  zone_controls_widget.hpp
src/utils/: cuda_postprocessing.cu  cuda_preprocessing.cu  logger.cpp
test/: old_security_dashboard.cpp
